[package]
name = "floodgate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csa = { git = "https://github.com/sugyan/csa-rs", branch = "move-records" }
yasai = { git = "https://github.com/sugyan/yasai", rev = "ce0084d" }
